--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,31 @@ spring:
     name: "demo"
   kafka:
     bootstrap-servers: "localhost:9092"
-    consumer:
-      group-id: "myGroup"
-      auto-offset-reset: earliest
+---
+# producer
+spring:
+  config:
+    activate:
+      on-profile: producer
+  kafka:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+server:
+  port: 8080
+---
+# consumer
+spring:
+  config:
+    activate:
+      on-profile: consumer
+  kafka:
+    consumer:
+      group-id: warehouseGroup
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+server:
+  port: 8081
